<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/learning" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/headerText"
                android:layout_marginBottom="32dp"
                android:text="@string/question_1_act_one" />

            <TextView
                style="@style/questionText"
                android:layout_marginBottom="56dp"
                android:text="@string/question_activity_one" />

            <RadioGroup
                android:id="@+id/radio_button_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/ninth_wrong_answer"
                    style="@style/selectAnswerText"
                    android:text="@string/ninth_century" />

                <RadioButton
                    android:id="@+id/fifteen_wrong_answer"
                    style="@style/selectAnswerText"
                    android:text="@string/fifteenth_century" />

                <RadioButton
                    android:id="@+id/correct_answer_radio_button"
                    style="@style/selectAnswerText"
                    android:text="@string/twelfth_century" />

                <RadioButton
                    android:id="@+id/sixteen_wrong_answer"
                    style="@style/selectAnswerText"
                    android:text="@string/sixteenth_century" />
            </RadioGroup>

            <TextView
                android:id="@+id/additional_info_question_one"
                style="@style/additionalInfoStyle"
                android:text="@string/additional_info_quest_one" />

            <Button
                android:id="@+id/nextActivity"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:onClick="submitAnswer"
                android:text="@string/submit_button_text" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>