<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hispaniccountries" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/headerText"
                android:layout_marginBottom="32dp"
                android:text="@string/question_five_act_five" />

            <TextView
                style="@style/questionText"
                android:layout_marginBottom="56dp"
                android:text="@string/last_question" />

            <CheckBox
                android:id="@+id/peru_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginStart="150dp"
                android:text="@string/peru" />

            <CheckBox
                android:id="@+id/spain_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginStart="150dp"
                android:text="@string/spain" />

            <CheckBox
                android:id="@+id/paraguay_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginStart="150dp"
                android:text="@string/paraguay" />

            <CheckBox
                android:id="@+id/equatorial_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginStart="150dp"
                android:text="@string/equatorial_guinea" />

            <CheckBox
                android:id="@+id/bolivia_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginStart="150dp"
                android:text="@string/bolivia" />

            <TextView
                android:id="@+id/additional_info_question_five"
                style="@style/additionalInfoStyle"
                android:text="@string/additional_info_question_five" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:onClick="submitAnswer"
                android:text="@string/submit" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>