<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/headerText"
                android:layout_marginBottom="32dp"
                android:text="@string/question_two_header" />

            <TextView
                style="@style/questionText"
                android:layout_marginBottom="56dp"
                android:text="@string/question_two_act_two" />

            <EditText
                android:id="@+id/user_answer_submit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/enter_number_here" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:onClick="submitAnswer"
                android:text="@string/submit_answer" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>